Now it works. Like really works. Quadtree, a few more heightmaps, larger map, working frustum culling

--- a/Demo.vcxproj
+++ b/Demo.vcxproj
@@ -268,9 +268,11 @@
     <Image Include="grass-free-texture.jpg" />
     <Image Include="grass.dds" />
     <Image Include="heightmap.bmp" />
+    <Image Include="peninsula.bmp" />
     <Image Include="seamlessstone.dds" />
     <Image Include="stone.dds" />
     <Image Include="stone.jpg" />
+    <Image Include="world.bmp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Demo.rc" />
