--- a/Demo.vcxproj.filters
+++ b/Demo.vcxproj.filters
@@ -167,6 +167,9 @@
     <Image Include="capsule0.dds">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="marble.dds">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Demo.rc">
@@ -181,6 +184,9 @@
     <None Include="capsule.mtl">
       <Filter>Resource Files</Filter>
     </None>
+    <None Include="materials.mtl">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Object Include="wt_teapot.obj">
@@ -190,6 +196,9 @@
       <Filter>Resource Files</Filter>
     </Object>
     <Object Include="capsule.obj">
+      <Filter>Resource Files</Filter>
+    </Object>
+    <Object Include="cube.obj">
       <Filter>Resource Files</Filter>
     </Object>
   </ItemGroup>
