Removed files that were no longer used including the GraphicsHandler which has had its functions moved to Engine.  The ShaderHandler rewrite is now complete

--- a/Demo.vcxproj.filters
+++ b/Demo.vcxproj.filters
@@ -16,6 +16,12 @@
     <Filter Include="Source Files\Shaders">
       <UniqueIdentifier>{c23679cc-511c-489e-8b8f-eb5661095f16}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Resource Files\Models and materials">
+      <UniqueIdentifier>{6fc258b0-1355-4bb5-9143-f09ac7311ae7}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Resource Files\Textures">
+      <UniqueIdentifier>{2b165103-11b6-4218-a235-2e853af89e83}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -24,16 +30,10 @@
     <ClCompile Include="Engine.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="GraphicsHandler.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="LightHandler.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="CameraHandler.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="GlobalResources.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ObjectHandler.cpp">
@@ -42,16 +42,10 @@
     <ClCompile Include="TimeHandler.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="old_main.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="QuadtreeHandler.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="FrustumHandler.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="ComputeShader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ShaderHandler.cpp">
@@ -71,16 +65,10 @@
     <FxCompile Include="LightFragment.hlsl">
       <Filter>Source Files\Shaders</Filter>
     </FxCompile>
-    <FxCompile Include="LightVertex.hlsl">
-      <Filter>Source Files\Shaders</Filter>
-    </FxCompile>
     <FxCompile Include="ShadowFragment.hlsl">
       <Filter>Source Files\Shaders</Filter>
     </FxCompile>
     <FxCompile Include="ShadowVertex.hlsl">
-      <Filter>Source Files\Shaders</Filter>
-    </FxCompile>
-    <FxCompile Include="ComputePassVertex.hlsl">
       <Filter>Source Files\Shaders</Filter>
     </FxCompile>
     <FxCompile Include="ComputePassPixel.hlsl">
@@ -89,21 +77,15 @@
     <FxCompile Include="FXAACompute.hlsl">
       <Filter>Source Files\Shaders</Filter>
     </FxCompile>
+    <FxCompile Include="FullScreenTriangleVertex.hlsl">
+      <Filter>Source Files\Shaders</Filter>
+    </FxCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="bth_image.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="resource.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Engine.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="GlobalResources.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="GraphicsHandler.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="LightHandler.hpp">
@@ -124,9 +106,6 @@
     <ClInclude Include="FrustumHandler.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="ComputeShader.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="ShaderHandler.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -143,72 +122,43 @@
     </Text>
   </ItemGroup>
   <ItemGroup>
-    <Image Include="heightmap.bmp">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="grass-free-texture.jpg">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="grass.dds">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="stone.dds">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="stone.jpg">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="seamlessstone.dds">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="peninsula.bmp">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="world.bmp">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="capsule0.jpg">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="capsule0.dds">
-      <Filter>Resource Files</Filter>
+    <Image Include="gray-marble.dds">
+      <Filter>Resource Files\Textures</Filter>
     </Image>
     <Image Include="marble.dds">
-      <Filter>Resource Files</Filter>
+      <Filter>Resource Files\Textures</Filter>
     </Image>
-    <Image Include="gray-marble.dds">
-      <Filter>Resource Files</Filter>
+    <Image Include="grass.dds">
+      <Filter>Resource Files\Textures</Filter>
     </Image>
-  </ItemGroup>
-  <ItemGroup>
-    <ResourceCompile Include="Demo.rc">
-      <Filter>Resource Files</Filter>
-    </ResourceCompile>
+    <Image Include="seamlessstone.dds">
+      <Filter>Resource Files\Textures</Filter>
+    </Image>
+    <Image Include="world.bmp">
+      <Filter>Resource Files\Textures</Filter>
+    </Image>
+    <Image Include="peninsula.bmp">
+      <Filter>Resource Files\Textures</Filter>
+    </Image>
+    <Image Include="heightmap.bmp">
+      <Filter>Resource Files\Textures</Filter>
+    </Image>
+    <Image Include="stone.dds">
+      <Filter>Resource Files\Textures</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-    <None Include="donut_red_lambert_20000_tris_TRIANGLULATED.mtl">
-      <Filter>Resource Files</Filter>
-    </None>
-    <None Include="capsule.mtl">
-      <Filter>Resource Files</Filter>
-    </None>
     <None Include="materials.mtl">
-      <Filter>Resource Files</Filter>
+      <Filter>Resource Files\Models and materials</Filter>
     </None>
   </ItemGroup>
   <ItemGroup>
     <Object Include="wt_teapot.obj">
-      <Filter>Resource Files</Filter>
-    </Object>
-    <Object Include="donut_red_lambert_20000_tris_TRIANGLULATED.obj">
-      <Filter>Resource Files</Filter>
-    </Object>
-    <Object Include="capsule.obj">
-      <Filter>Resource Files</Filter>
+      <Filter>Resource Files\Models and materials</Filter>
     </Object>
     <Object Include="cube.obj">
-      <Filter>Resource Files</Filter>
+      <Filter>Resource Files\Models and materials</Filter>
     </Object>
   </ItemGroup>
 </Project>
