Some minor updates and added comments

--- a/Demo.vcxproj
+++ b/Demo.vcxproj
@@ -296,6 +296,7 @@
     <ClInclude Include="CameraHandler.hpp" />
     <ClInclude Include="Engine.hpp" />
     <ClInclude Include="FrustumHandler.hpp" />
+    <ClInclude Include="GlobalSettings.hpp" />
     <ClInclude Include="LightHandler.hpp" />
     <ClInclude Include="ObjectHandler.hpp" />
     <ClInclude Include="QuadtreeHandler.hpp" />
