--- a/Demo.vcxproj.filters
+++ b/Demo.vcxproj.filters
@@ -109,6 +109,9 @@
     <ClInclude Include="ShaderHandler.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="GlobalSettings.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="known_issues.txt">
